// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Domain /> <TestDomain /> should render correctly with ACTIVE status 1`] = `
[
  <div
    className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <form
    className="sc-bcXGCL ikCHIX"
    id="custom-domain-form"
    onSubmit={[Function]}
  >
    <h4
      className="sc-bcXGCL iydxHs cap-heading"
    >
      domain.name
    </h4>
    <div
      className="sc-bcXGCL agnBR"
    >
      <div
        className="sc-bcXGCL kikZuf"
      >
        <div
          className="sc-bcXGCL ojXDq"
        >
          <p
            className="sc-bcXGCL hMzJdb cap-text"
          >
            capco.subdomain
          </p>
          <p
            className="sc-bcXGCL Ebxhi cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL fEPdMN cap-form-control"
        role="group"
      >
        <label
          className="sc-bcXGCL ituTec cap-form-label"
          htmlFor="subDomain"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <p
            className="sc-bcXGCL JNsrJ cap-text"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            sub-domain
          </p>
        </label>
        <input
          aria-required={true}
          className="sc-bcXGCL sc-UpCiH cXnqTP cvFBmb cap-input"
          disabled={true}
          id="subDomain"
          name="subDomain"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="admiun.project.create.title.placeholder"
          required={true}
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      className="sc-bcXGCL gwrAWp"
    >
      <div
        className="sc-bcXGCL kikZuf"
      >
        <div
          className="sc-bcXGCL ojXDq"
        >
          <p
            className="sc-bcXGCL hMzJdb cap-text"
          >
            custom-domain
          </p>
          <p
            className="sc-bcXGCL Ebxhi cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL kikZuf"
      >
        <div
          className="sc-bcXGCL fEPdMN cap-form-control"
          role="group"
        >
          <label
            className="sc-bcXGCL ituTec cap-form-label"
            htmlFor="customDomain"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <p
              className="sc-bcXGCL JNsrJ cap-text"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              custom-domain-name
            </p>
          </label>
          <span
            className="sc-bcXGCL iWfQcz cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              className="sc-bcXGCL Ebxhi cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            className="sc-bcXGCL kmjSdm cap-input-group"
          >
            <div
              className="sc-bcXGCL irGATn"
            >
              <div
                className="sc-bcXGCL cTrnv sc-fXqqsB gHWJqw cap-tag"
                style={{}}
                title="custom.domain.com"
              >
                <p
                  className="sc-bcXGCL kOjlpv cap-text cap-tag__label"
                >
                  custom.domain.com
                </p>
                <div
                  aria-label="close"
                  className="sc-bcXGCL gLfoLZ cap-tag__closeButton"
                  onClick={[Function]}
                  role="button"
                  style={
                    {
                      "opacity": 0,
                      "right": "0rem",
                    }
                  }
                >
                  <svg
                    className="sc-bcXGCL sc-eJDTud fFcDCb dUaqWe cap-icon"
                    fill="none"
                    viewBox="0 0 12 12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 11L11 1M1 1l10 10"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth={0.8}
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal={true}
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      role="dialog"
      style={
        {
          "display": "none",
        }
      }
      tabIndex={-1}
    />
  </form>,
]
`;

exports[`<Domain /> <TestDomain /> should render correctly with IDLE status 1`] = `
[
  <div
    className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <form
    className="sc-bcXGCL ikCHIX"
    id="custom-domain-form"
    onSubmit={[Function]}
  >
    <h4
      className="sc-bcXGCL iydxHs cap-heading"
    >
      domain.name
    </h4>
    <div
      className="sc-bcXGCL agnBR"
    >
      <div
        className="sc-bcXGCL kikZuf"
      >
        <div
          className="sc-bcXGCL ojXDq"
        >
          <p
            className="sc-bcXGCL hMzJdb cap-text"
          >
            capco.subdomain
          </p>
          <p
            className="sc-bcXGCL Ebxhi cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL fEPdMN cap-form-control"
        role="group"
      >
        <label
          className="sc-bcXGCL ituTec cap-form-label"
          htmlFor="subDomain"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <p
            className="sc-bcXGCL JNsrJ cap-text"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            sub-domain
          </p>
        </label>
        <input
          aria-required={true}
          className="sc-bcXGCL sc-UpCiH cXnqTP cvFBmb cap-input"
          disabled={true}
          id="subDomain"
          name="subDomain"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="admiun.project.create.title.placeholder"
          required={true}
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      className="sc-bcXGCL gwrAWp"
    >
      <div
        className="sc-bcXGCL kikZuf"
      >
        <div
          className="sc-bcXGCL ojXDq"
        >
          <p
            className="sc-bcXGCL hMzJdb cap-text"
          >
            custom-domain
          </p>
          <p
            className="sc-bcXGCL Ebxhi cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL kikZuf"
      >
        <div
          className="sc-bcXGCL fEPdMN cap-form-control"
          role="group"
        >
          <label
            className="sc-bcXGCL ituTec cap-form-label"
            htmlFor="customDomain"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <p
              className="sc-bcXGCL JNsrJ cap-text"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              custom-domain-name
            </p>
          </label>
          <span
            className="sc-bcXGCL iWfQcz cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              className="sc-bcXGCL Ebxhi cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            className="sc-bcXGCL kmjSdm cap-input-group"
          >
            <input
              className="sc-bcXGCL sc-UpCiH cXnqTP cvFBmb cap-input"
              disabled={false}
              id="customDomain"
              name="customDomain"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="custom-domain-placeholder"
              required={false}
              type="text"
            />
            <button
              className="sc-bcXGCL sc-laZSpB hgLfnE hlwnod cap-button"
              disabled={true}
              type="submit"
            >
              global.use
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal={true}
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      role="dialog"
      style={
        {
          "display": "none",
        }
      }
      tabIndex={-1}
    />
  </form>,
]
`;
